# dphpc-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  readme.md
basic_cuda_malloc_benchmarks/: generate_coalescing_potential.sh  malloc_source_comparison.cu  plot.py
basic_cuda_malloc_benchmarks/dynamic_improvement/: Untitled.ipynb  dynamic_coalescing_potential.cu  generate_coalescing_potential.sh
basic_cuda_malloc_benchmarks/dynamic_improvement/results/2021-11-15-16:17:00--7a31834b247dc59619adc020f05ed4e061fd6c00/: malloc_coalesced.csv  malloc_non_coalesced.csv
basic_cuda_malloc_benchmarks/static_improvement/: generate_coalescing_potential.sh  malloc_source_comparison.cu
benchmarks/: Makefile  benchmark_dt_cpu.sh  benchmark_dt_gpu.sh  benchmark_is_cpu.sh  benchmark_is_gpu.sh  benchmark_pi_cpu.sh  benchmark_pi_gpu.sh  benchmark_sputnipic_cpu.sh  benchmark_sputnipic_gpu.sh  copy_kernel_perf.cu  deadlock_test.cu  host_device_comm.cuh  memory_access.cu  reserved_copy_kernel.cu  results_copy_kernel_perf_V100.txt  results_cummulative_sequential_V100.txt  results_reserved_copy_kernel_V100.txt  results_single_gpu_V100.txt  single_gpu.cu  single_gpu_cummulative.cu  single_gpu_cummulative_efficient.cu
benchmarks/mpi_communication/: Makefile  galilei_results_cpu.txt  galilei_results_gpu.txt  mpi_communication.c
common/: CMakeLists.txt  common.cu  common.h  device_vector.cuh
cuda_p2p_benchmarks/: CMakeLists.txt  cuda_p2p_benchmark.cu  cuda_p2p_block.cu  cuda_p2p_device.cu  cuda_p2p_host_device.cu  cuda_p2p_multi_device.cu  cuda_p2p_warp.cu  cuda_send_recv.cuh  plot_results.r  run_benchmarks.sh
cuda_p2p_benchmarks/ault_v100_results/: benchmark_block.txt  benchmark_device.txt  benchmark_host_device.txt  benchmark_multi_device.txt  benchmark_warp.txt  host_device_raw_data.txt
dynamic_allocator/: alignment_tests.cu  benchmarks.cu  benchmarks.ipynb  benchmarks_separate.cu  benchmarks_template.cu  dynamic_allocator.cu  plot.py  plotting_presentation.ipynb  plotting_report.ipynb  plotting_temp.ipynb  run.sh  tests.cu  warp_malloc.cu  warp_malloc_v2.cu
dynamic_allocator/results/2021-12-13-12:31:08/: benchmarks_template.cu  dynamic_allocator.cu  out.csv
dynamic_allocator/results/2021-12-17-13:20:34/: benchmarks_template.cu  out.csv
dynamic_allocator/results/2021-12-17-13:27:53/: out.csv
dynamic_allocator/results/2021-12-21-22:28:47_presentation_run__powers of 2/: benchmarks_template.cu  out.csv
dynamic_allocator/results/2021-12-22-01:33:26_presentation run_25 step to 500/: out.csv
examples/: CMakeLists.txt  cpi.c.cu
examples/malloc_static_analysis/: cpi.c  cpi.cu
examples/pi/: Makefile
gpu_libs/: CMakeLists.txt
gpu_libs/cuda_btl/: CMakeLists.txt  cuda_btl_test.cu  cuda_mpi.cu  cuda_mpi.cuh  cuda_mpi_test.cu  cuda_send_recv.cuh
gpu_libs/gpu_libc/: CMakeLists.txt  assert.cu  assert.cuh  assert.h.cuh  complex.h.cuh  cstdio.cuh  cstdlib.cuh  ctype.cu  ctype.cuh  ctype.h.cuh  ctypes.h.cuh  cuda_mpi.cu  cuda_mpi.cuh  device_vector.cuh  dirent.h.cuh  errno.cu  errno.cuh  errno.h.cuh  getopt.cuh  getopt.h.cuh  gpu_ctypes.cu  gpu_delegation.cu  gpu_stdio.cu  gpu_stdio.h  gpu_stdlib.cu  gpu_string.cu  gpu_unistd.cu  inttypes.cuh  inttypes.h.cuh  limits.h.cuh  math.h.cuh  mp4_printf.cu  mp4_printf.cuh  omp.cu  omp.cuh  omp.h.cuh  readme.md  signal.h.cuh  stdarg.cu  stdarg.cuh  (+18 more)
gpu_libs/gpu_libc/sys/: gpu_time.cu  resource.h.cuh  stat.h.cuh  time.cu  time.cuh  time.h.cuh  types.h.cuh
gpu_libs/gpu_main/: CMakeLists.txt  device_host_comm.cu  device_host_comm.cuh  global_vars.cu  global_vars.cuh  libc_processor.cu  libc_processor.cuh  main.cu
gpu_libs/gpu_malloc/: CMakeLists.txt  combined_malloc.cu  combined_malloc.cuh  dyn_malloc.cu  dyn_malloc.cuh  dyn_malloc_no_header.cu  dynamic_allocator.cu  dynamic_allocator.cuh  no_header_malloc.cu  no_header_malloc.cuh  warp_malloc.cu  warp_malloc.cuh
gpu_libs/gpu_mpi/: CMakeLists.txt  communicator.cu  communicator.cuh  datatypes.cu  datatypes.cuh  gpu_mpi.cu  gpu_mpi.h  group.cu  group.cuh  mpi.cu  mpi.cuh  mpi.h.cuh  mpi_common.cuh  mpi_operators_list.cuh  mpi_types_list.cuh  operators.cu  operators.cuh
gpu_libs/gpumpi_common/: CMakeLists.txt  common.h
gpu_libs/managed_memory/: CMakeLists.txt  hostdevicecommunicator.cu  hostdevicecommunicator.cuh  managed_memory.cu  managed_memory.h  test_managed_memory.cu
include/: Alloc.h  Basic.h  ConfigFile.hpp  Mover.h  Parameters.h  Particles.h  Solvers.h  mpi_comm.h
malloc_base/: gm_malloc.cpp  gm_malloc.hpp  malloc_draft.cpp  test_gm_malloc.cpp
mpi_malloc_benchmarks/: access_perf.c  alltoall.c  bcast.c  benchmarks.ipynb  combined.c  malloc_perf.c  plotting_temp.ipynb  reduce.c  run.sh  scalar_product.c
scripts/: CMakeLists.txt  ault_dev_env.sh  build_on_gpu.py  build_on_gpu.sh  convert_and_build.sh  convert_everything.py  convert_everything.sh  environment.sh  fast_setup.sh  generate_cmake_from_executions.py  gpu_info.cu  gpumpicc.py  header_extractor.sh  include_replace.sh  show_compile_options.py
source_converter/: CMakeLists.txt  converter.cpp
src/: Alloc.c  BC.c  Basic.c  IC.c  IO.c  InterpDensNet.c  InterpDensSpecies.c  Mover.c  Particles.cpp  Smoothing.c  mpi_comm.c  mpi_comm.cpp  sputniPIC_CPU.c  sputniPIC_CPU.cpp
strided_benchmarks/: plot_strided_benchmarks.ipynb  run_benchmark.cu  strided_write.cu
tests/: CMakeLists.txt  collectives_test.cu  communicator_test.cu  cuda_mpi_test.cu  sample_test.cu  test_runner.cuh
tests/converter/: convert.sh  malloc.c
thread_divergence/: thread_divergence.cu
toolchain_tests/: CMakeLists.txt  make_plots.py
toolchain_tests/global_var/: Makefile  global_var.c  test.sh
toolchain_tests/npb/: dt_benchmark.sh  dt_test.sh  is_benchmark.sh  is_test.sh
toolchain_tests/pi/: Makefile  benchmark.sh  cpi.c  test.sh
toolchain_tests/sputnipic/: benchmark.sh
toolchain_tests/sputnipic/include/: BC.h  Grid.h  IO.h  InterpDens_aux.h  MaxwellSolver.h  Smoothing.h  mpi_comm.h
toolchain_tests/sputnipic/src/: Alloc.c  EMfield.c  Grid.c  InterpDens_aux.c  MaxwellSolver.c  Parameters.c  Particles.c  Solvers.c  sputniPIC_CPU.c
(+4 files in other folders)
